2010-12-07  Arnold Metselaar  <arnold.metselaar@planet.nl>

	Backport from trunk for PR gas/12269
	* config/tc-z80.c (emit_mx, emit_ldxhl): Do not use
        symbol_get_value_expression on a symbol that may not yet have
        a value.
        * testsuite/gas/z80/atend.s: New file, test case for bug 12269,
        provided by Chris Smith.
        * testsuite/gas/z80/atend.d: New file, expected results for atend.s.
        * testsuite/gas/z80/z80.exp: Run new test case.

2010-11-30  Joel Sherrill  <joel.sherrill@oarcorp.com>

	* configure.tgt: Add sparc64-rtems.

2010-11-25  Alan Modra  <amodra@gmail.com>

	* po/es.po: Update.

2010-11-25  Alan Modra  <amodra@gmail.com>

	PR gas/12264
	* compress-debug.c: Include config.h first.

2010-11-17  Nick Clifton  <nickc@redhat.com>

	* input-file.c (input_file_open): Check for empty input files.
	(input_file_get): Check for end of file before reading any more
	data.
	(input_file_give_next_buffer): Likewise.

2010-11-18  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR gas/12181
	* config/obj-elf.c (elf_adjust_symtab) [TE_SOLARIS]: Make sy
	weak hidden.

2010-11-15  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (macro_build): Remove gas_assert from 'o' case.
	Use a restricted gas_assert for 'i' and 'j'.

2010-11-15  H.J. Lu  <hongjiu.lu@intel.com>

	* config/obj-elf.c (elf_process_stab): Mark parameters as
	ATTRIBUTE_UNUSED.

2010-11-15  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/obj-elf.c (elf_generate_asm_lineno): New function.
	(elf_process_stab): New function.
	(elf_format_ops): Always use them as generate_asm_lineno,
	process_stab members.

2010-11-15  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	PR gas/12198
	* config/tc-arm.c (arm_arch_v6m_only): New variable.
	(aeabi_set_public_attributes): Ensure we only set the Operating System
	Extension when we are on an M-profile core.

2010-11-10  Richard Sandiford  <richard.sandiford@linaro.org>
